[New] integrate ejs
[wip] still working

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,5 +16,5 @@
 @import "./global/global";      // global styles
 
 // sections
-@import "./main.scss"
-@import "./layout/header";
+@import "./layout/_main.scss";
+@import "./layout/_header";
