--- a/src/ejs/404.ejs
+++ b/src/ejs/404.ejs
@@ -33,7 +33,7 @@
         <a href="https://github.com/tr1s/tris-webpack-boilerplate"
             class="logo-link"
             aria-label="Tristan's webpack boilerplate github repository."
-            ><img class="logo-img" src="images/favicon.svg" alt="website logo" /></a>
+            ><img class="logo-img" src="../images/favicon.svg" alt="website logo" /></a>
 
         <h1> ontheroad.jp <span>404</span>
             <a href="https://github.com/tr1s/tris-webpack-boilerplate"
