--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,8 +1,5 @@
-header {
+.navbar {
     background: $light-grey;
-}
-
-.nav {
     display: flex;
     align-items: center;
     border-bottom: 1px solid $grey;
