[New] integrate FontAwesome5 (svg)

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -8,8 +8,7 @@
 <head><%- include('partials/_head', {meta: siteMeta}) %></head>
 <body>
 
-<%- include('pages/_index') %>
-<%# include('pages/_example') %>
-
+<%# include('pages/_index') %>
+<%- include('pages/_example') %>
 </body>
 </html>
