--- a/src/ejs/pages/_example.ejs
+++ b/src/ejs/pages/_example.ejs
@@ -117,14 +117,23 @@
 
         <div class="box-3">
             <div class="text-box left round shadow">
+                <%- include('../partials/_icon', {
+                    props: {size:1, icon:'fas fa-dog'}
+                }); %>
                 <h3>text-box 01</h3>
                 <p>.round .shadow</p>
             </div>
             <div class="text-box center round shadow">
+                <%- include('../partials/_icon', {
+                    props: {size:2, icon:'fas fa-dog'}
+                }); %>
                 <h3>text-box 02</h3>
                 <p>.round .shadow</p>
             </div>
             <div class="text-box right round shadow">
+                <%- include('../partials/_icon', {
+                    props: {size:3, icon:'fas fa-dog'}
+                }); %>
                 <h3>text-box 03</h3>
                 <p>.round .shadow</p>
             </div>
