--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,5 +19,6 @@
 @import "./components/navbar";
 @import "./components/section_header";
 @import "./components/section_body";
+@import "./components/icon";
 @import "./components/box";
 @import "./components/images";
