--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -10,6 +10,10 @@
 
 <%- include('pages/_index') %>
 <%# include('pages/_example') %>
-
+<div style="margin:300px">
+    <i class="fas fa-dog fa-3x"></i>
+    <i class="far fa-comments fa-3x"></i>
+    <i class="fas fa-cat fa-3x fa-flip-horizontal"></i>
+</div>
 </body>
 </html>
