--- a/src/ejs/404.ejs
+++ b/src/ejs/404.ejs
@@ -1,5 +1,5 @@
 <%
-    include('variables/_head_404.ejs');
+    include('settings/_head_404.ejs');
     const siteMeta = siteMetaInfo();
 %>
 
@@ -8,7 +8,7 @@
 <head><%- include('partials/_head', {meta: siteMeta}) %></head>
 <body>
 
-<%- include('pages/_404') %>
+<%- include('partials/_navbar.ejs') %>
 
 </body>
 </html>
