--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -1,5 +1,5 @@
 <%
-    include('variables/_head_index.ejs');
+    include('settings/_head_index.ejs');
     const siteMeta = siteMetaInfo();
 %>
 
@@ -8,7 +8,7 @@
 <head><%- include('partials/_head', {meta: siteMeta}) %></head>
 <body>
 
-<%# include('pages/_index') %>
-<%- include('pages/_example') %>
+<%- include('partials/_navbar') %>
+
 </body>
 </html>
